    * Add Net::SSLeay::OCSP_RESPONSE class.
    * Add Net::SSLeay::DER#d2i_OCSP_REQUEST method.
    * Add Net::SSLeay::DER#d2i_OCSP_RESPONSE method.
    * Add Net::SSLeay::DER#i2d_OCSP_REQUEST method.
    * Add Net::SSLeay#load_client_CA_file method.
    * Add Net::SSLeay::SSL_CTX#set_client_CA_list method.
    * Add Net::SSLeay::SSL_CTX#add_client_CA method.
    
0.011 2024-11-12
  [New Features]
    * Add Net::SSLeay::X509_NAME class.
    * Add Net::SSLeay::X509_NAME#oneline method.
    * Add Net::SSLeay::X509_NAME#DESTROY method.
    * Add Net::SSLeay::X509_NAME#get_text_by_NID method.
    * Add Net::SSLeay::X509#get_issuer_name method.
    * Add Net::SSLeay::X509#get_subject_name method.
    * Add Net::SSLeay::EVP_MD class.
    * Add Net::SSLeay::EVP class.
    * Add Net::SSLeay::EVP#get_digestbyname method.
    * Add Net::SSLeay::X509#digest method.
    * Add Net::SSLeay::X509#pubkey_digest method.
    * Add Net::SSLeay#get_certificate method.
    * Add Net::SSLeay::X509_VERIFY_PARAM#set_flags method.
    * Add Net::SSLeay::EVP_PKEY class.
    * Add Net::SSLeay::EVP_PKEY#DESTROY method.
    * Add Net::SSLeay#get0_next_proto_negotiated method.
    * Add Net::SSLeay#get0_alpn_selected method.
    * Add Net::SSLeay#get_peer_cert_chain method.
    * Add Net::SSLeay::ASN1_OBJECT class.
    * Add Net::SSLeay::OBJ class.
    * Add Net::SSLeay::OBJ#txt2nid method.
0.010 2024-11-11
  [New Features]
    * Add Net::SSLeay::BIO#new_file method.
    * Add Net::SSLeay::DH class.
    * Add Net::SSLeay::PEM#read_bio_DHparams method.
    * Add Net::SSLeay#get_servername method.
    * Add Net::SSLeay::SSL_CTX#set_alpn_protos method.
    * Add Net::SSLeay::EC_KEY class.
    * Add Net::SSLeay::SSL_CTX#set_tmp_ecdh method.
    * Add Net::SSLeay::SSL_CTX#set1_groups_list method.
    * Add Net::SSLeay::SSL_CTX#set1_curves_list method.
    * Add Net::SSLeay#set_tlsext_status_type method.
    * Add Net::SSLeay#alert_desc_string_long method.
    * Add Net::SSLeay::EC_KEY#free method.