@@ -22,6 +22,7 @@
     * Add Net::SSLeay#load_client_CA_file method.
     * Add Net::SSLeay::SSL_CTX#set_client_CA_list method.
     * Add Net::SSLeay::SSL_CTX#add_client_CA method.
+    * Add Net::SSLeay#get_SSL_CTX  method.
     
 0.011 2024-11-12
   [New Features]
